--- a/index.html
+++ b/index.html
@@ -1,50 +1,73 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Siri Sunshine: Home</title>
+    <style>
+        h1 {
+            font-size: 69px;
+        }
+
+        p {
+            font-size: 40px;
+        }
+	
+
+        body {
+            font-family: 'Courier New', monospace;
+        }
+
+        h1 {
+            text-align: center;
+        }
+
+        p {
+            text-align: center;
+        }
+		
+		
+		  p {
+            text-align: center;
+        }
+		
+		
+		
+		
+
+        /* Link styles */
+        a:link, a:visited {
+            color: white;
+            text-decoration: none;
+        }
+
+        a:hover {
+            color: gray;
+            text-decoration: underline;
+        }
+		
+		
+		
+		
+		
+		
+		
+		
+    </style>
+</head>
+<body style="background-color:#1a171f;">
+
+<h1 style="color:white;">siri sunshine</h1>
+
+  <p>
+    <a href="events.html">events</a> 
+    <a href="stream.html">stream</a> 
     <a href="merch.html">merch</a> 
     <a href="Fix this you fat fucking retard">bandcamp</a>
-  </p1>
-
-<div class="image123">
-    <div class="imgContainer">
-        <img src="albumart.png" alt="CD"/>
-        <div class="TxtContainer">
-            <p>make me feel something cd (preorder) $10</p>
-        </div>
-    </div>
-
-    <div class="imgContainer">
-        <img src="outline.png" alt="T-shirt"/>
-        <div class="TxtContainer">
-            <p>Siri Sunshine T-shirt $20</p>
-        </div>
-    </div>
-
-    <div class="imgContainer">
-        <img src="outline.png" alt="T-shirt"/>
-        <div class="TxtContainer">
-            <p>Siri Sunshine T-shirt $20</p>
-        </div>
-    </div>
+  </p>
+<div style="text-align: center;">
+    <img width="400" src="outline.png">
 </div>
-
-</body>
-</html>
-
-
-		
-		
-		
-    </div>
-
-</body>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
 <br>
 <br>
 <br>
@@ -56,8 +79,8 @@
 <br>
 <br>
  <footer>
-  <p1>to purchase, send an email to</p1>
-  <br>
-  <p1><a href="mailto:sirisunshinemusic@gmail.com"> sirisunshinemusic@gmail.com</a></p1>
-</footer> 
+<p><a href="https://www.youtube.com/@NottaFoamer"> credit to kadence for the site (click)</a></p>
+</body>
+
+
 </html>
