--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <a href="events.html">events</a> 
     <a href="stream.html">stream</a> 
     <a href="merch.html">merch</a> 
-    <a href="Fix this you fat fucking retard">bandcamp</a>
+    <a href="sirisunshine.bandcamp.com">bandcamp</a>
   </p>
 <div style="text-align: center;">
     <img width="400" src="outline.png">
