--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <a href="events.html">events</a> 
     <a href="stream.html">stream</a> 
     <a href="merch.html">merch</a> 
-    <a href="sirisunshine.bandcamp.com">bandcamp</a>
+    <a onclick="window.location ='https://sirisunshine.bandcamp.com/'">bandcamp</a>
   </p>
 <div style="text-align: center;">
     <img width="400" src="outline.png">
@@ -78,8 +78,14 @@
 <br>
 <br>
 <br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
  <footer>
-<p><a href="https://www.youtube.com/@NottaFoamer"> credit to kadence for the site (click)</a></p>
+<p style="font-size:125%;" ><a href="https://www.youtube.com/@NottaFoamer"> credit to kadence for the site (click)</a></p>
 </body>
 
 
