--- a/events.html
+++ b/events.html
@@ -104,7 +104,7 @@
     <section id="concert" class="grid">
         <div class="concert-container">
             <div class="img_container">
-                <img src="event.png" class="info">
+                <img src="Event.png" class="info">
             </div>
             <div class="about_content">
                 <p style="color:white;">Concert info here</p>
