--- a/main.html
+++ b/main.html
@@ -12,7 +12,6 @@
         p {
             font-size: 40px;
         }
-	
 
         body {
             font-family: 'Courier New', monospace;
@@ -25,34 +24,17 @@
         p {
             text-align: center;
         }
-		
-		
-		  p {
-            text-align: center;
-        }
-		
-		
-		
-		
 
-        /* Link styles */
         a:link, a:visited {
             color: white;
-            text-decoration: none;
+            text-decoration: none; /* Prevent underlines or other link styles */
         }
 
         a:hover {
-            color: gray;
-            text-decoration: underline;
+            color: gray; /* Change color when hovering */
+            text-decoration: underline; /* Underline the link on hover */
         }
-		
-		
-		
-		
-		
-		
-		
-		
+
     </style>
 </head>
 <body style="background-color:#1a171f;">
@@ -63,7 +45,8 @@
     <a href="events.html">events</a> 
     <a href="stream.html">stream</a> 
     <a href="merch.html">merch</a> 
-    <a href="Fix this you fat fucking retard">bandcamp</a>
+    <!-- Change this to a normal href to keep the link styling consistent -->
+    <a href="https://sirisunshine.bandcamp.com/">bandcamp</a>
   </p>
 <div style="text-align: center;">
     <img width="400" src="outline.png">
@@ -78,9 +61,13 @@
 <br>
 <br>
 <br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
  <footer>
-<p><a href="https://www.youtube.com/@NottaFoamer"> credit to kadence for the site (click)</a></p>
+<p style="font-size:125%;" ><a href="https://www.youtube.com/@NottaFoamer"> credit to kadence for the site (click)</a></p>
 </body>
-
-
 </html>
