--- a/stream.html
+++ b/stream.html
@@ -60,7 +60,7 @@
 </head>
 <body>
 
-  <h1><a href="https://www.youtube.com/@NottaFoamer"> credit to kadence for the site (click)</a></h1>
+  <h1>siri sunshine</h1>
 
   <p>
     <a href="events.html">events</a> 
