--- a/main.html
+++ b/main.html
@@ -39,7 +39,7 @@
 </head>
 <body style="background-color:#1a171f;">
 
-<h1 style="color:white;">siri sunshine</h1>
+<h1><a href="main.html"> siri sunshine (click)</a></h1>
 
   <p>
     <a href="events.html">events</a> 
