--- a/main.html
+++ b/main.html
@@ -2,72 +2,61 @@
 <html>
 <head>
   <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Siri Sunshine: Home</title>
-    <style>
-        h1 {
-            font-size: 69px;
-        }
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Siri Sunshine: Home</title>
+  <style>
+      h1 {
+          font-size: 69px;
+      }
 
-        p {
-            font-size: 40px;
-        }
+      p {
+          font-size: 40px;
+      }
 
-        body {
-            font-family: 'Courier New', monospace;
-        }
+      body {
+          font-family: 'Courier New', monospace;
+          background-color: #1a171f; /* Set background color */
+          color: white; /* Default text color to white */
+      }
 
-        h1 {
-            text-align: center;
-        }
+      h1, p {
+          text-align: center;
+      }
 
-        p {
-            text-align: center;
-        }
+      /* Apply consistent styles to all links */
+      a:link, a:visited {
+          color: gray; /* Set all links to gray color */
+          text-decoration: none; /* Remove underlines from links */
+      }
 
-        a:link, a:visited {
-            color: white;
-            text-decoration: none; /* Prevent underlines or other link styles */
-        }
+      a:hover {
+          color: lightgray; /* Make the link color lighter when hovered */
+          text-decoration: underline; /* Underline the link on hover */
+      }
 
-        a:hover {
-            color: gray; /* Change color when hovering */
-            text-decoration: underline; /* Underline the link on hover */
-        }
-
-    </style>
+      footer p {
+          font-size: 125%; /* Footer text size */
+      }
+  </style>
 </head>
-<body style="background-color:#1a171f;">
+<body>
 
-<h1><a href="main.html"> siri sunshine (click)</a></h1>
+<h1><a href="main.html">siri sunshine (click)</a></h1>
 
-  <p>
-    <a href="events.html">events</a> 
-    <a href="stream.html">stream</a> 
-    <a href="merch.html">merch</a> 
-    <!-- Change this to a normal href to keep the link styling consistent -->
-    <a href="https://sirisunshine.bandcamp.com/">bandcamp</a>
-  </p>
+<p>
+  <a href="events.html">events</a> 
+  <a href="stream.html">stream</a> 
+  <a href="merch.html">merch</a> 
+  <a href="https://sirisunshine.bandcamp.com/">bandcamp</a>
+</p>
+
 <div style="text-align: center;">
-    <img width="400" src="outline.png">
+  <img width="400" src="outline.png" alt="Siri Sunshine">
 </div>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
- <footer>
-<p style="font-size:125%;" ><a href="https://www.youtube.com/@NottaFoamer"> credit to kadence for the site (click)</a></p>
+
+<footer>
+  <p><a href="https://www.youtube.com/@NottaFoamer">credit to kadence for the site (click)</a></p>
+</footer>
+
 </body>
 </html>
