--- a/merch.html
+++ b/merch.html
@@ -140,7 +140,7 @@
  <footer>
   <p1>to purchase, send an email to</p1>
   <br>
-  <p1><a href="mailto:sirisunshinemusic@gmail.com"> sirisunshinemusic@gmail.com</a></p1>
+  <p1><a href="mailto:sirisunshine@sirisunshine.net"> sirisunshine@sirisunshine.net</a></p1>
 </footer> 
 <br>
 <br>
