--- a/main.html
+++ b/main.html
@@ -4,6 +4,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Siri Sunshine: Home</title>
+
+
+
+<title>Siri Sunshine!</title>
+<meta content="Embed Title" property="og:title" />
+<meta content="Site Description" property="og:description" />
+<meta content="https://sirisunshine.net" property="og:url" />
+<meta content="https://sirisunshine.net/albumart.png" property="og:image" />
+
+
+
+
+
+
+
+
+
+
+  
   <style>
       h1 {
           font-size: 69px;
