--- a/main.html
+++ b/main.html
@@ -2,27 +2,12 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Siri Sunshine: Home</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"
 
-
-
-<title>Siri Sunshine!</title>
-<meta content="Embed Title" property="og:title" />
-<meta content="Site Description" property="og:description" />
+<meta content="Welcome to the Siri Sunshine and The Moonshiners website!" property="og:description" />
 <meta content="https://sirisunshine.net" property="og:url" />
 <meta content="https://sirisunshine.net/albumart.png" property="og:image" />
-
-
-
-
-
-
-
-
-
-
-  
+  <title>Siri Sunshine: Home</title>
   <style>
       h1 {
           font-size: 69px;
