--- a/index.html
+++ b/index.html
@@ -2,58 +2,40 @@
 <html>
 <head>
   <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Siri Sunshine: Home</title>
-    <style>
-        h1 {
-            font-size: 69px;
-        }
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Siri Sunshine: Home</title>
+  <style>
+      h1 {
+          font-size: 69px;
+      }
 
-        p {
-            font-size: 40px;
-        }
-	
+      p {
+          font-size: 40px;
+      }
 
-        body {
-            font-family: 'Courier New', monospace;
-        }
+      body {
+          font-family: 'Courier New', monospace;
+      }
 
-        h1 {
-            text-align: center;
-        }
+      h1 {
+          text-align: center;
+      }
 
-        p {
-            text-align: center;
-        }
-		
-		
-		  p {
-            text-align: center;
-        }
-		
-		
-		
-		
+      p {
+          text-align: center;
+      }
 
-        /* Link styles */
-        a:link, a:visited {
-            color: white;
-            text-decoration: none;
-        }
+      /* Link styles */
+      a:link, a:visited {
+          color: white;
+          text-decoration: none;
+      }
 
-        a:hover {
-            color: gray;
-            text-decoration: underline;
-        }
-		
-		
-		
-		
-		
-		
-		
-		
-    </style>
+      a:hover {
+          color: gray;
+          text-decoration: underline;
+      }
+  </style>
 </head>
 <body style="background-color:#1a171f;">
 
@@ -63,7 +45,7 @@
     <a href="events.html">events</a> 
     <a href="stream.html">stream</a> 
     <a href="merch.html">merch</a> 
-    <a onclick="window.location ='https://sirisunshine.bandcamp.com/'">bandcamp</a>
+    <a href="https://sirisunshine.bandcamp.com/" target="_blank">bandcamp</a>
   </p>
 <div style="text-align: center;">
     <img width="400" src="outline.png">
@@ -86,7 +68,7 @@
 <br>
  <footer>
 <p style="font-size:125%;" ><a href="https://www.youtube.com/@NottaFoamer"> credit to kadence for the site (click)</a></p>
+</footer>
+
 </body>
-
-
 </html>
