--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta content="Siri Sunshine's Website" property="og:title" />
+  <meta content="Welcome!" property="og:description" />
+  <meta content="https://sirisunshine.net" property="og:url" />
+  <meta content="http://sirisunshine.net/albumart.png" property="og:image" />
+  <meta content="#1a171f" data-react-helmet="true" name="theme-color" />
+
+
+
+  
   <title>Siri Sunshine: Home</title>
   <style>
       h1 {
