--- a/main.html
+++ b/main.html
@@ -2,8 +2,16 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"
-    
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta content="Siri Sunshine's Website" property="og:title" />
+  <meta content="Welcome!" property="og:description" />
+  <meta content="https://sirisunshine.net" property="og:url" />
+  <meta content="http://sirisunshine.net/albumart.png" property="og:image" />
+  <meta content="#1a171f" data-react-helmet="true" name="theme-color" />
+
+
+
+  
   <title>Siri Sunshine: Home</title>
   <style>
       h1 {
@@ -16,53 +24,59 @@
 
       body {
           font-family: 'Courier New', monospace;
-          background-color: #1a171f; /* Set background color */
-          color: white; /* Default text color to white */
       }
 
-      h1, p {
+      h1 {
           text-align: center;
       }
 
-      /* Apply consistent styles to all links */
+      p {
+          text-align: center;
+      }
+
+      /* Link styles */
       a:link, a:visited {
-          color: gray; /* Set all links to gray color */
-          text-decoration: none; /* Remove underlines from links */
+          color: white;
+          text-decoration: none;
       }
 
       a:hover {
-          color: lightgray; /* Make the link color lighter when hovered */
-          text-decoration: underline; /* Underline the link on hover */
+          color: gray;
+          text-decoration: underline;
       }
-
-      footer p {
-          font-size: 125%; /* Footer text size */
-      }
-
-      /* Specific styling for external links like Bandcamp */
-      a[href^="http"]:not([href*="sirisunshine.bandcamp.com"]) {
-          color: gray !important; /* Force gray color for external links */
-      }
-
   </style>
 </head>
-<body>
+<body style="background-color:#1a171f;">
 
-<h1><a href="main.html">siri sunshine (click)</a></h1>
+<h1 style="color:white;">siri sunshine</h1>
 
-<p>
-  <a href="events.html">events</a> 
-  <a href="stream.html">stream</a> 
-  <a href="merch.html">merch</a> 
-  <a href="https://sirisunshine.bandcamp.com/">bandcamp</a>
-</p>
-
+  <p>
+    <a href="events.html">events</a> 
+    <a href="stream.html">stream</a> 
+    <a href="merch.html">merch</a> 
+    <a href="https://sirisunshine.bandcamp.com/" target="_blank">bandcamp</a>
+  </p>
 <div style="text-align: center;">
-  <img width="400" src="outline.png" alt="Siri Sunshine">
+    <img width="400" src="outline.png">
 </div>
-
-<footer>
-  <p><a href="https://www.youtube.com/@NottaFoamer">credit to kadence for the site (click)</a></p>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+ <footer>
+<p style="font-size:125%;" ><a href="https://www.youtube.com/@NottaFoamer"> credit to kadence for the site (click)</a></p>
 </footer>
 
 </body>
