--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta content="https://sirisunshine.net/outline.png" property="og:image" />
 <meta content="#1a171f" data-react-helmet="true" name="theme-color" />
   
-  <title>Siri Sunshine: Home</title>
+  <title>siri sunshine: home</title>
   <style>
       h1 {
           font-size: 69px;
@@ -54,7 +54,7 @@
     <a href="https://sirisunshine.bandcamp.com/" target="_blank">bandcamp</a>
   </p>
 <div style="text-align: center;">
-    <img width="400" src="outline.png">
+    <img width="400" src="christmas!.png">
 </div>
 <br>
 <br>
