--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <a href="https://sirisunshine.bandcamp.com/" target="_blank">bandcamp</a>
   </p>
 <div style="text-align: center;">
-    <img width="400" src="christmas!.png">
+    <img width="400" src="outline.png">
 </div>
 <br>
 <br>
