--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
           text-align: center;
       }
 
+      a {
+          text-align: center;
+      }
+
+    
+
       /* Link styles */
       a:link, a:visited {
           color: white;
