--- a/stream.html
+++ b/stream.html
@@ -71,7 +71,7 @@
 
   <div class="image123">
     <div class="imgContainer">
-      <a href="https://music.apple.com/" target="_blank">
+      <a href="https://music.apple.com/us/album/make-me-feel-something/1787742080" target="_blank">
         <img src="apple.png" alt="Apple" />
       </a>
     </div>
