--- a/stream.html
+++ b/stream.html
@@ -76,12 +76,12 @@
       </a>
     </div>
     <div class="imgContainer">
-      <a href="https://spotify.com" target="_blank">
+      <a href="https://open.spotify.com/album/0xpzoZzI7UJypktOvdRWRo" target="_blank">
         <img src="spotify.png" alt="Spotify" />
       </a>
     </div>
     <div class="imgContainer">
-      <a href="https://music.youtube.com/" target="_blank">
+      <a href="https://www.youtube.com/@sirisunshine" target="_blank">
         <img src="ytmusic.png" alt="YouTube Music" />
       </a>
     </div>
