--- a/events.html
+++ b/events.html
@@ -103,11 +103,8 @@
     <br>
     <section id="concert" class="grid">
         <div class="concert-container">
-            <div class="img_container">
-                <img src="tinkers.png" class="info">
-            </div>
             <div class="about_content">
-                <p style="color:white;">Concert info here</p>
+                <p style="color:white;">Nothing going on! Sorry!</p>
             </div>
         </div>
 		
