--- a/merch.html
+++ b/merch.html
@@ -1,3 +1,59 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Siri Sunshine: Merch</title>
+    <style>
+        body {
+            background-color: #1a171f;
+            color: white;
+            text-align: center;
+            font-family: Arial, sans-serif;
+        }
+
+        .image123 {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .imgContainer {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .imgContainer img {
+            max-width: 200px;
+            height: auto;
+            margin-bottom: 10px;
+        }
+
+        .TxtContainer p {
+            margin: 0;
+            font-size: 18px;
+        }
+
+        h1 {
+            font-size: 69px;
+        }
+
+        p1 {
+            font-size: 40px;
+        }
+
+        body {
+            font-family: 'Courier New', monospace;
+        }
+
+        h1 {
+            text-align: center;
+        }
+        
+        p1 {
             text-align: center;
         }
         
@@ -44,7 +100,7 @@
     </div>
 
     <div class="imgContainer">
-        <img src="outline.png" alt="T-shirt"/>
+        <img src="gsjpshirt.png" alt="T-shirt"/>
         <div class="TxtContainer">
             <p>Siri Sunshine T-shirt $20</p>
         </div>
@@ -76,18 +132,8 @@
 <br>
 <br>
 <br>
-<br>
-<br>
-<br>
-<br>
-<br>
  <footer>
-  <p1>to purchase, send an email to</p1>
-  <br>
-  <p1><a href="mailto:sirisunshinemusic@gmail.com"> sirisunshinemusic@gmail.com</a></p1>
-</footer> 
-</html>
- <footer>
-<p style="font-size:125%;" ><a href="https://www.youtube.com/@NottaFoamer"> credit to kadence for the site (click)</a></p>
+<p style="font-size:125%;" ><a href="https://www.youtube.com/@NottaFoamer"> credit to indie for the site (click)</a></p>
 </body>
+    </section>
 </html>
