--- a/events.html
+++ b/events.html
@@ -125,7 +125,7 @@
 <br>
 <br>
  <footer>
-<p style="font-size:125%;" ><a href="https://www.youtube.com/@NottaFoamer"> credit to kadence for the site (click)</a></p>
+<p style="font-size:125%;" ><a href="https://www.youtube.com/@NottaFoamer"> credit to indie for the site (click)</a></p>
 </body>
     </section>
 </html>
