--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 <br>
 <br>
 <br>
-<p style="font-size:175 %;" ><a href="https://distrokid.com/hyperfollow/sirisunshineandthemoonshiners/make-me-feel-something"> PRESAVE THE ALBUM !!
+<br>
 <br>
 <br>
 <br>
@@ -79,7 +79,7 @@
 <br>
 <br>
  <footer>
-<p style="font-size:125%;" ><a href="https://www.youtube.com/@NottaFoamer"> credit to kadence for the site (click)</a></p>
+<p style="font-size:125%;" ><a href="https://www.youtube.com/@NottaFoamer"> credit to indie for the site (click)</a></p>
 </footer>
 
 </body>
