--- a/merch.html
+++ b/merch.html
@@ -81,7 +81,7 @@
     <a href="events.html">events</a> 
     <a href="stream.html">stream</a> 
     <a href="merch.html">merch</a> 
-    <a href="Fix this you fat fucking retard">bandcamp</a>
+    <a href="https://sirisunshine.bandcamp.com/album/make-me-feel-something">bandcamp</a>
   </p1>
 
 <div class="image123">
@@ -124,7 +124,7 @@
 <br>
 <br>
 <br>
-<p style="font-size:175 %;" ><a href="https://distrokid.com/hyperfollow/sirisunshineandthemoonshiners/make-me-feel-something"> PRESAVE THE ALBUM !!	
+<p1 style="font-size:175 %;" ><a href="mailto:sirisunshinemusic@sirisunshine.net"> send an email to purchase !!	
 <br>
 <br>
 <br>
