--- a/merch.html
+++ b/merch.html
@@ -124,7 +124,13 @@
 <br>
 <br>
 <br>
-<p1 style="font-size:175 %;" ><a href="mailto:sirisunshinemusic@sirisunshine.net"> send an email to purchase !!	
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<p1 style="font-size:175 %;" ><a href="mailto:sirisunshinemusic@sirisunshine.net"> send an email to sirisunshinemusic@sirisunshine.net
 <br>
 <br>
 <br>
