--- a/events.html
+++ b/events.html
@@ -104,7 +104,11 @@
     <section id="concert" class="grid">
         <div class="concert-container">
             <div class="about_content">
-                <p style="color:white;">Nothing going on! Sorry!</p>
+<div style="text-align: center;">
+    <img width="400" src="53025.png">
+<div style="text-align: center;">
+    <img width="400" src="61425.png">
+</div>
             </div>
         </div>
 		
