--- a/events.html
+++ b/events.html
@@ -104,10 +104,13 @@
     <section id="concert" class="grid">
         <div class="concert-container">
             <div class="about_content">
-<div style="text-align: center;">
-    <img width="400" src="53025.png">
-<div style="text-align: center;">
-    <img width="400" src="61425.png">
+<div class="image123">
+    <div class="imgContainer">
+        <img src="53025.png" height="200" width="200"/>
+    </div>
+    <div class="imgContainer">
+        <img class="middle-img" src="61425.png"/ height="200" width="200"/>
+    </div>
 </div>
             </div>
         </div>
