--- a/events.html
+++ b/events.html
@@ -106,11 +106,10 @@
             <div class="about_content">
 <div class="image123">
     <div class="imgContainer">
-        <img src="53025.png" height="200" width="200"/>
+        <img src="53025.png/>
     </div>
     <div class="imgContainer">
-        <img class="middle-img" src="61425.png"/ height="200" width="200"/>
-    </div>
+        <img class="middle-img" src="61425.png"/>
 </div>
             </div>
         </div>
