--- a/events.html
+++ b/events.html
@@ -106,7 +106,7 @@
             <div class="about_content">
 <div class="image123">
     <div class="imgContainer">
-        <img src="53025.png/>
+        <img src="53025.png"/>
     </div>
     <div class="imgContainer">
         <img class="middle-img" src="61425.png"/>
