--- a/events.html
+++ b/events.html
@@ -106,10 +106,10 @@
             <div class="about_content">
 <div class="image123">
     <div class="imgContainer">
-        <img src="53025.png"/>
+        <img width="400" length="310" src="53025.png"/>
     </div>
     <div class="imgContainer">
-        <img class="middle-img" src="61425.png"/>
+        <img class="middle-img" width="400" length="285" src="61425.png"/>
 </div>
             </div>
         </div>
