--- a/events.html
+++ b/events.html
@@ -101,7 +101,11 @@
     <br>
     <br>
     <br>
-    <section id="concert" class="grid">
+	 <style>
+        div.container {
+          display:inline-block;
+        }
+        <section id="concert" class="grid">
         <div class="concert-container">
             <div class="about_content">
 <div class="image123">
@@ -113,6 +117,11 @@
 </div>
             </div>
         </div>
+        p {
+          text-align:center;
+        }
+      </style>
+
 		
 		<br>
 <br>
