--- a/events.html
+++ b/events.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Siri Sunshine: Events</title>
-	
     <style>
         body {
             background-color: #1a171f;
@@ -15,114 +14,90 @@
         h1 {
             font-size: 69px;
         }
-
         p1 {
             font-size: 40px;
         }
-
         body {
             font-family: 'Courier New', monospace;
         }
-
         h1 {text-align: center;}
         p1 {text-align: center;}
-
         p {
             font-size: 45px;
         }
-
         #concert .grid {
             display: flex; 
             justify-content: center; 
             align-items: center;  
             height: 100vh;  
         }
-
         .concert-container {
             display: flex; 
             align-items: center;  
             justify-content: center; 
         }
-
         .img_container {
             margin-right: 20px;  
         }
-
         .info {
             width: 400px;  
             height: auto;  
         }
-
         .about_content {
             display: flex;
             flex-direction: column; 
             justify-content: center; 
             align-items: center;  
         }
-
         .about_content p {
             color: white;  
             font-size: 75px;  
             text-align: center; 
         }
-
         /* Corrected CSS for links */
         a:link {
             color: white;
             background-color: transparent;
             text-decoration: none;
         }
-
         a:visited {
             color: white;
             background-color: transparent;
             text-decoration: none;
         }
-
         a:hover {
             color: gray;
             background-color: transparent;
             text-decoration: underline;
         }
     </style>
-	
     <h1 style="color:white;">siri sunshine</h1>
-
    <p1>
     <a href="events.html">events</a> 
     <a href="stream.html">stream</a> 
     <a href="merch.html">merch</a> 
     <a onclick="window.location ='https://sirisunshine.bandcamp.com/'">bandcamp</a>
   </p1>
-
     <br>
     <br>
     <br>
     <br>
     <br>
     <br>
-	 <style>
-        div.container {
-          display:inline-block;
-        }
-        <section id="concert" class="grid">
+    <section id="concert" class="grid">
         <div class="concert-container">
             <div class="about_content">
 <div class="image123">
     <div class="imgContainer">
+        <img src="53025.png"/>
         <img width="400" length="310" src="53025.png"/>
     </div>
     <div class="imgContainer">
+        <img class="middle-img" src="61425.png"/>
         <img class="middle-img" width="400" length="285" src="61425.png"/>
 </div>
             </div>
         </div>
-        p {
-          text-align:center;
-        }
-      </style>
-
-		
 		<br>
 <br>
 <br>
@@ -143,4 +118,3 @@
 </body>
     </section>
 </html>
-
