--- a/events.html
+++ b/events.html
@@ -89,11 +89,8 @@
             <div class="about_content">
 <div class="image123">
     <div class="imgContainer">
-        <img width="400" length="310" src="53025.png"/>
+        <img width="400" length="310" src="514290630_1416552513022291_4756155097981645594_n.jpg"/>
     </div>
-    <div class="imgContainer">
-        <img class="middle-img" width="400" length="285" src="61425.png"/>
-</div>
             </div>
         </div>
 		<br>
