--- a/merch.html
+++ b/merch.html
@@ -85,24 +85,13 @@
   </p1>
 
 <div class="image123">
-    <div class="imgContainer">
-        <img src="albumart.png" alt="CD"/>
-        <div class="TxtContainer">
-            <p>make me feel something cd (preorder) $10</p>
-        </div>
     </div>
-
-    <div class="imgContainer">
-        <img src="outline.png" alt="T-shirt"/>
-        <div class="TxtContainer">
-            <p>Siri Sunshine T-shirt $20</p>
-        </div>
     </div>
 
     <div class="imgContainer">
         <img src="gsjpshirt.png" alt="T-shirt"/>
         <div class="TxtContainer">
-            <p>Siri Sunshine T-shirt $20</p>
+            <p>GSJP T-Shirt $20</p>
         </div>
     </div>
 </div>
