--- a/stream.html
+++ b/stream.html
@@ -113,9 +113,9 @@
 </script>
   <br><br><br><br>
 
-  <h2>stream the first album</h2>
+  <h2>stream the new ep</h2>
   <div style="text-align: center;">
-    <img width="400" src="albumart.png">
+    <img width="400" src="20250517_230728.jpg">
   </div>
 <br>
 <br>
