--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       }
 
       body {
-          font-family: 'Courier New', monospace;
+          font-family: 'Ming_LiU', monospace;
       }
 
       h1 {
