--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 <body style="background-color:#1a171f;">
 
-<h1 style="color:white;">siri sunshine</h1>
+<h1 style="color:white;">SIRI SUNSHINE AND THE MOONSHINERS</h1>
 
   <p>
     <a href="events.html">events</a> 
