--- a/index.html
+++ b/index.html
@@ -39,24 +39,24 @@
 
       /* Link styles */
       a:link, a:visited {
-          color: white;
+          color: DarkRed;
           text-decoration: none;
       }
 
       a:hover {
-          color: gray;
+          color: red;
           text-decoration: underline;
       }
   </style>
 </head>
-<body style="background-color:#1a171f;">
+<body style="background-color:#000000;">
 
-<h1 style="color:white;">SIRI SUNSHINE AND THE MOONSHINERS</h1>
+<h1 style="color:red;">SIRI SUNSHINE AND THE MOONSHINERS</h1>
 
   <p>
-    <a href="events.html">events</a> 
-    <a href="stream.html">stream</a> 
-    <a href="merch.html">merch</a> 
+    <a href="events.html">EVENTS</a> 
+    <a href="stream.html">STREAM</a> 
+    <a href="merch.html">MERCH</a> 
     <a href="https://sirisunshine.bandcamp.com/" target="_blank">bandcamp</a>
   </p>
 <div style="text-align: center;">
