--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <a href="https://sirisunshine.bandcamp.com/" target="_blank">bandcamp</a>
   </p>
 <div style="text-align: center;">
-    <img width="400" src="outline.png">
+    <img width="400" src="LOGO.png">
 </div>
 <br>
 <br>
