--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <a href="events.html">EVENTS</a> 
     <a href="stream.html">STREAM</a> 
     <a href="merch.html">MERCH</a> 
-    <a href="https://sirisunshine.bandcamp.com/" target="_blank">bandcamp</a>
+    <a href="https://sirisunshine.bandcamp.com/" target="_blank">BANDCAMP</a>
   </p>
 <div style="text-align: center;">
     <img width="400" src="LOGO.png">
