--- a/index.html
+++ b/index.html
@@ -38,15 +38,21 @@
     
 
       /* Link styles */
-      a:link, a:visited {
-          color: DarkRed;
-          text-decoration: none;
-      }
-
-      a:hover {
-          color: red;
-          text-decoration: underline;
-      }
+    a:link {
+            color: red;
+            background-color: transparent;
+            text-decoration: none;
+        }
+        a:visited {
+            color: darkred;
+            background-color: transparent;
+            text-decoration: none;
+        }
+        a:hover {
+            color: darkred;
+            background-color: transparent;
+            text-decoration: underline;
+        }
   </style>
 </head>
 <body style="background-color:#000000;">
