--- a/events.html
+++ b/events.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Siri Sunshine: Events</title>
+    <title>SSATMS: EVENTS</title>
     <style>
         body {
-            background-color: #1a171f;
+            background-color: #000000;
             color: white;
             text-align: center;
             font-family: Arial, sans-serif;
@@ -56,17 +56,17 @@
         }
         /* Corrected CSS for links */
         a:link {
-            color: white;
+            color: red;
             background-color: transparent;
             text-decoration: none;
         }
         a:visited {
-            color: white;
+            color: darkred;
             background-color: transparent;
             text-decoration: none;
         }
         a:hover {
-            color: gray;
+            color: darkred;
             background-color: transparent;
             text-decoration: underline;
         }
