--- a/events.html
+++ b/events.html
@@ -71,12 +71,12 @@
             text-decoration: underline;
         }
     </style>
-    <h1 style="color:white;">siri sunshine</h1>
+    <h1 style="color:RED;">SIRI SUNSHINE AND THE MOONSHINERS</h1>
    <p1>
-    <a href="events.html">events</a> 
-    <a href="stream.html">stream</a> 
-    <a href="merch.html">merch</a> 
-    <a onclick="window.location ='https://sirisunshine.bandcamp.com/'">bandcamp</a>
+    <a href="events.html">EVENTS</a> 
+    <a href="stream.html">STREAM</a> 
+    <a href="merch.html">MERCH</a> 
+    <a onclick="window.location ='https://sirisunshine.bandcamp.com/'">BANDCAMP</a>
   </p1>
     <br>
     <br>
