--- a/events.html
+++ b/events.html
@@ -18,7 +18,7 @@
             font-size: 40px;
         }
         body {
-            font-family: 'Courier New', monospace;
+            font-face: 'Ming_LiU', monospace;
         }
         h1 {text-align: center;}
         p1 {text-align: center;}
