--- a/events.html
+++ b/events.html
@@ -76,7 +76,7 @@
     <a href="events.html">EVENTS</a> 
     <a href="stream.html">STREAM</a> 
     <a href="merch.html">MERCH</a> 
-    <a onclick="window.location ='https://sirisunshine.bandcamp.com/'">BANDCAMP</a>
+    <a href="https://sirisunshine.bandcamp.com/" target="_blank">BANDCAMP</a>
   </p1>
     <br>
     <br>
