--- a/stream.html
+++ b/stream.html
@@ -6,10 +6,10 @@
   <title>Siri Sunshine: Stream</title>
   <style>
     body {
-      background-color: #1a171f;
+      background-color: #000000;
       color: white;
       text-align: center;
-      font-family: 'Courier New', monospace;
+      font-face: 'Ming_LiU', monospace;
     }
 
     h1 {
@@ -47,26 +47,32 @@
       font-size: 18px;
     }
 	
-    a:link, a:visited {
-      color: white;
-      text-decoration: none; 
-    }
-
-    a:hover {
-      color: gray; 
-      text-decoration: underline; 
-    }
+    a:link {
+            color: red;
+            background-color: transparent;
+            text-decoration: none;
+        }
+        a:visited {
+            color: darkred;
+            background-color: transparent;
+            text-decoration: none;
+        }
+        a:hover {
+            color: darkred;
+            background-color: transparent;
+            text-decoration: underline;
+        }
   </style>
 </head>
 <body>
 
-  <h1>siri sunshine</h1>
+  <h1>SIRI SUNSHINE AND THE MOONSHINERS</h1>
 
   <p>
-    <a href="events.html">events</a> 
-    <a href="stream.html">stream</a> 
-    <a href="merch.html">merch</a> 
-    <a onclick="window.location ='https://sirisunshine.bandcamp.com/'">bandcamp</a>
+    <a href="events.html">EVENTS</a> 
+    <a href="stream.html">STREAM</a> 
+    <a href="merch.html">MERCH</a> 
+    <a href="https://sirisunshine.bandcamp.com/" target="_blank">BANDCAMP</a>
   </p>
 
   <div class="image123">
@@ -124,7 +130,6 @@
 <br>
 <br>
 <br>
-<p style="font-size:175 %;" ><a href="https://distrokid.com/hyperfollow/sirisunshineandthemoonshiners/make-me-feel-something"> PRESAVE THE ALBUM !!	
 <br>
 <br>
 <br>
