--- a/stream.html
+++ b/stream.html
@@ -66,7 +66,7 @@
 </head>
 <body>
 
-  <h1>SIRI SUNSHINE AND THE MOONSHINERS</h1>
+  <h1 style="color:red">SIRI SUNSHINE AND THE MOONSHINERS</h1>
 
   <p>
     <a href="events.html">EVENTS</a> 
