--- a/merch.html
+++ b/merch.html
@@ -6,7 +6,7 @@
     <title>Siri Sunshine: Merch</title>
     <style>
         body {
-            background-color: #1a171f;
+            background-color: #000000;
             color: white;
             text-align: center;
             font-family: Arial, sans-serif;
@@ -46,7 +46,7 @@
         }
 
         body {
-            font-family: 'Courier New', monospace;
+            font-face: 'Ming_LiU', monospace;
         }
 
         h1 {
@@ -62,26 +62,32 @@
         }
 
         /* Ensure links stay white and don't turn blue */
-        a:link, a:visited {
-            color: white;
-            text-decoration: none; /* Prevent underlines or other link styles */
+    a:link {
+            color: red;
+            background-color: transparent;
+            text-decoration: none;
         }
-
+        a:visited {
+            color: darkred;
+            background-color: transparent;
+            text-decoration: none;
+        }
         a:hover {
-            color: gray; /* Change color when hovering */
-            text-decoration: underline; /* Underline the link on hover */
-        }
+            color: darkred;
+            background-color: transparent;
+            text-decoration: underline;
+        
     </style>
 </head>
 <body>
 
-<h1 style="color:white;">siri sunshine</h1>
+<h1 style="color:white;">SIRI SUNSHINE AND THE MOONSHINERS</h1>
 
   <p1>
-    <a href="events.html">events</a> 
-    <a href="stream.html">stream</a> 
-    <a href="merch.html">merch</a> 
-    <a href="https://sirisunshine.bandcamp.com/album/make-me-feel-something">bandcamp</a>
+    <a href="events.html">EVENTS</a> 
+    <a href="stream.html">STREAM</a> 
+    <a href="merch.html">MERCH</a> 
+    <a href="https://sirisunshine.bandcamp.com/album/make-me-feel-something">BANDCAMP</a>
   </p1>
 
 <div class="image123">
