--- a/merch.html
+++ b/merch.html
@@ -9,7 +9,7 @@
             background-color: #000000;
             color: white;
             text-align: center;
-            font-family: Arial, sans-serif;
+            font-face: Ming_LiU, sans-serif;
         }
 
         .image123 {
