--- a/merch.html
+++ b/merch.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Siri Sunshine: Merch</title>
+    <title>SSATMS: MERCH</title>
     <style>
         body {
             background-color: #000000;
@@ -81,7 +81,7 @@
 </head>
 <body>
 
-<h1 style="color:white;">SIRI SUNSHINE AND THE MOONSHINERS</h1>
+<h1 style="color:red;">SIRI SUNSHINE AND THE MOONSHINERS</h1>
 
   <p1>
     <a href="events.html">EVENTS</a> 
