--- a/stream.html
+++ b/stream.html
@@ -77,12 +77,12 @@
 
   <div class="image123">
     <div class="imgContainer">
-      <a href="https://music.apple.com/us/album/make-me-feel-something/1787742080" target="_blank">
+      <a href="https://music.apple.com/us/artist/siri-sunshine-and-the-moonshiners/1787742081" target="_blank">
         <img src="apple.png" alt="Apple" />
       </a>
     </div>
     <div class="imgContainer">
-      <a href="https://open.spotify.com/album/0xpzoZzI7UJypktOvdRWRo" target="_blank">
+      <a href="https://open.spotify.com/artist/376q8NNEGrFi2guhwSqx9M" target="_blank">
         <img src="spotify.png" alt="Spotify" />
       </a>
     </div>
@@ -119,9 +119,9 @@
 </script>
   <br><br><br><br>
 
-  <h2>stream the new ep</h2>
+  <h2>stream the new song</h2>
   <div style="text-align: center;">
-    <img width="400" src="20250517_230728.jpg">
+    <img width="400" src="bloa.png">
   </div>
 <br>
 <br>
