--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <meta content="the site for siri sunshine and the moonshiners" property="og:description" />
 <meta content="https://sirisunshine.net" property="og:url" />
 <meta content="https://sirisunshine.net/logo.png" property="og:image" />
-<meta content="#1a171f" data-react-helmet="true" name="theme-color" />
+<meta content="#000000" data-react-helmet="true" name="theme-color" />
   
   <title>siri sunshine: home</title>
   <style>
