--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="SIRI SUNSHINE AND THE MOONSHINERS" property="og:title" />
 <meta content="the site for siri sunshine and the moonshiners" property="og:description" />
 <meta content="https://sirisunshine.net" property="og:url" />
-<meta content="https://sirisunshine.net/logo.png" property="og:image" />
+<meta content="https://sirisunshine.net/LOGO.png" property="og:image" />
 <meta content="#000000" data-react-helmet="true" name="theme-color" />
   
   <title>siri sunshine: home</title>
