--- a/merch.html
+++ b/merch.html
@@ -125,7 +125,7 @@
 <br>
 <br>
 <br>
-<p1 style="font-size:175 %;" ><a href="mailto:sirisunshinemusic@sirisunshine.net"> send an email to sirisunshinemusic@sirisunshine.net
+<p1 style="font-size:175 %;" ><a href="mailto:sirisunshine@sirisunshine.net"> send an email to sirisunshine@sirisunshine.net
 <br>
 <br>
 <br>
@@ -138,3 +138,4 @@
 </body>
     </section>
 </html>
+
