--- a/stream.html
+++ b/stream.html
@@ -71,7 +71,8 @@
   <p>
     <a href="events.html">EVENTS</a> 
     <a href="stream.html">STREAM</a> 
-    <a href="merch.html">MERCH</a> 
+    <a href="merch.html">MERCH</a>
+	<a href="contact.html">CONTACT</a> 
     <a href="https://sirisunshine.bandcamp.com/" target="_blank">BANDCAMP</a>
   </p>
 
@@ -143,3 +144,4 @@
 </body>
 </body>
 </html>
+
