--- a/events.html
+++ b/events.html
@@ -75,7 +75,8 @@
    <p1>
     <a href="events.html">EVENTS</a> 
     <a href="stream.html">STREAM</a> 
-    <a href="merch.html">MERCH</a> 
+    <a href="merch.html">MERCH</a>
+	<a href="contact.html">CONTACT</a>
     <a href="https://sirisunshine.bandcamp.com/" target="_blank">BANDCAMP</a>
   </p1>
     <br>
@@ -113,3 +114,4 @@
 </body>
     </section>
 </html>
+
