--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
   <p>
     <a href="events.html">EVENTS</a> 
     <a href="stream.html">STREAM</a> 
-    <a href="merch.html">MERCH</a> 
+    <a href="merch.html">MERCH</a>
+    <a href="contact.html">CONTACT</a>
     <a href="https://sirisunshine.bandcamp.com/" target="_blank">BANDCAMP</a>
   </p>
 <div style="text-align: center;">
