--- a/events.html
+++ b/events.html
@@ -90,7 +90,7 @@
             <div class="about_content">
 <div class="image123">
     <div class="imgContainer">
-        <img width="400" length="310" src="514290630_1416552513022291_4756155097981645594_n.jpg"/>
+        <img width="400" length="310" src=""/>
     </div>
             </div>
         </div>
@@ -114,4 +114,5 @@
 </body>
     </section>
 </html>
+
 
