--- a/merch.html
+++ b/merch.html
@@ -86,7 +86,8 @@
   <p1>
     <a href="events.html">EVENTS</a> 
     <a href="stream.html">STREAM</a> 
-    <a href="merch.html">MERCH</a> 
+    <a href="merch.html">MERCH</a>
+	<a href="contact.html">CONTACT</a>
     <a href="https://sirisunshine.bandcamp.com/album/make-me-feel-something">BANDCAMP</a>
   </p1>
 
@@ -138,4 +139,5 @@
 </body>
     </section>
 </html>
+
 
