--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="SIRI SUNSHINE AND THE MOONSHINERS" property="og:title" />
 <meta content="the site for siri sunshine and the moonshiners" property="og:description" />
 <meta content="https://sirisunshine.net" property="og:url" />
-<meta content="https://sirisunshine.net/LOGO.png" property="og:image" />
+<meta content="https://sirisunshine.net/sirilogo2.png" property="og:image" />
 <meta content="#000000" data-react-helmet="true" name="theme-color" />
   
   <title>siri sunshine: home</title>
@@ -67,7 +67,7 @@
     <a href="https://sirisunshine.bandcamp.com/" target="_blank">BANDCAMP</a>
   </p>
 <div style="text-align: center;">
-    <img width="400" src="LOGO.png">
+    <img width="400" src="sirilogo2.png">
 </div>
 <br>
 <br>
