--- a/stream.html
+++ b/stream.html
@@ -120,9 +120,9 @@
 </script>
   <br><br><br><br>
 
-  <h2>stream the new song</h2>
+  <h2>STREAM THE NEW SONG</h2>
   <div style="text-align: center;">
-    <img width="400" src="bloa.png">
+    <img width="400" src="btb.png">
   </div>
 <br>
 <br>
@@ -144,4 +144,5 @@
 </body>
 </body>
 </html>
+
 
