--- a/stream.html
+++ b/stream.html
@@ -123,6 +123,7 @@
   <h2>STREAM THE NEW SONG</h2>
   <div style="text-align: center;">
     <img width="400" src="btb.png">
+   <h2>you can now purchase make me feel something on vinyl or cd! click <href="https://elasticstage.com/sirisunshine">here!</href></h2>
   </div>
 <br>
 <br>
@@ -144,5 +145,6 @@
 </body>
 </body>
 </html>
+
 
 
