--- a/stream.html
+++ b/stream.html
@@ -120,10 +120,11 @@
 </script>
   <br><br><br><br>
 
+<h2>you can now purchase make me feel something on vinyl or cd! <a href="https://elasticstage.com/sirisunshine">click here!</a></h2>
   <h2>STREAM THE NEW SONG</h2>
   <div style="text-align: center;">
     <img width="400" src="btb.png">
-   <h2>you can now purchase make me feel something on vinyl or cd! click <href="https://elasticstage.com/sirisunshine">here!</href></h2>
+   
   </div>
 <br>
 <br>
@@ -145,6 +146,7 @@
 </body>
 </body>
 </html>
+
 
 
 
