--- a/merch.html
+++ b/merch.html
@@ -94,7 +94,7 @@
 <div class="image123">
     </div>
     </div>
-
+<h2>you can now purchase make me feel something on vinyl or cd! <a href="https://elasticstage.com/sirisunshine">click here!</a></h2>
     <div class="imgContainer">
         <img src="gsjpshirt.png" alt="T-shirt"/>
         <div class="TxtContainer">
@@ -139,5 +139,6 @@
 </body>
     </section>
 </html>
+
 
 
