--- a/merch.html
+++ b/merch.html
@@ -126,7 +126,7 @@
 <br>
 <br>
 <br>
-<p1 style="font-size:175 %;" ><a href="mailto:sirisunshine@sirisunshine.net"> send an email to sirisunshine@sirisunshine.net
+<p1 style="font-size:175 %;" ><a href="mailto:sirisunshine@sirisunshine.net"> send an email to sirisunshine@sirisunshine.net to purchase any clothing merchandise</a></p1>
 <br>
 <br>
 <br>
@@ -139,6 +139,7 @@
 </body>
     </section>
 </html>
+
 
 
 
