--- a/events.html
+++ b/events.html
@@ -92,6 +92,9 @@
     <div class="imgContainer">
         <img width="400" length="310" src="553005475_4110990559121515_3594999438822484752_n.jpg"/>
     </div>
+	<div class="imgContainer">
+        <img width="400" length="310" src="A8B180DD-8E55-4037-B234-63668BFA37E5.jpg"/>
+    </div>
             </div>
         </div>
 		<br>
@@ -114,6 +117,7 @@
 </body>
     </section>
 </html>
+
 
 
 
