--- a/stream.html
+++ b/stream.html
@@ -98,7 +98,7 @@
 
 <script>
   // Set the target date for the countdown (January 6, 2025)
-  const targetDate = new Date("January 6, 2025 00:00:00").getTime();
+  const targetDate = new Date("October 24, 2025 00:00:00").getTime();
 
   // Update the countdown every 1 second
   const interval = setInterval(function() {
@@ -120,11 +120,11 @@
 </script>
   <br><br><br><br>
 
-<h2>you can now purchase make me feel something on vinyl or cd! <a href="https://elasticstage.com/sirisunshine">click here!</a></h2>
-  <h2>STREAM THE NEW SONG</h2>
+
+  <h2>STREAM THE DEMO EP</h2>
   <div style="text-align: center;">
-    <img width="400" src="btb.png">
-   
+    <img width="400" src="dead.png">
+  <h2>you can now purchase make me feel something on vinyl or cd! <a href="https://elasticstage.com/sirisunshine">click here!</a></h2> 
   </div>
 <br>
 <br>
@@ -146,6 +146,7 @@
 </body>
 </body>
 </html>
+
 
 
 
