--- a/stream.html
+++ b/stream.html
@@ -113,7 +113,15 @@
     const hours = Math.floor((timeRemaining % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
     const minutes = Math.floor((timeRemaining % (1000 * 60 * 60)) / (1000 * 60));
     const seconds = Math.floor((timeRemaining % (1000 * 60)) / 1000);
+	  
+ // Display the countdown
+    document.getElementById("countdown").innerHTML = 
+      days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
 
+    // If the countdown is over, display a message
+    if (timeRemaining < 0) {
+      clearInterval(interval);
+      document.getElementById("countdown").innerHTML = "out now on streaming";
 
     }
   }, 1000);
@@ -146,6 +154,7 @@
 </body>
 </body>
 </html>
+
 
 
 
