--- a/merch.html
+++ b/merch.html
@@ -94,7 +94,7 @@
 <div class="image123">
     </div>
     </div>
-<h2>yfor the sake of convenience, you can now purchase all merch on<a href="https://sirisunshine.bandcamp.com/">bandcamp</a></h2>
+<h2>for the sake of convenience, you can now purchase all merch on<a href="https://sirisunshine.bandcamp.com/">bandcamp</a></h2>
     <div class="imgContainer">
         <img src="gsjpshirt.png" alt="T-shirt"/>
         <div class="TxtContainer">
@@ -102,7 +102,7 @@
         </div>
     </div>
 </div>
-<h1>you can now purchase make me feel something on vinyl or cd! <a href="https://elasticstage.com/sirisunshine">click here!</a></h1>
+<h3>you can now purchase make me feel something on vinyl or cd! <a href="https://elasticstage.com/sirisunshine">click here!</a></h3>
 </body>
 </html>
 
@@ -139,6 +139,7 @@
 </body>
     </section>
 </html>
+
 
 
 
