--- a/events.html
+++ b/events.html
@@ -90,10 +90,7 @@
             <div class="about_content">
 <div class="image123">
     <div class="imgContainer">
-        <img width="400" length="310" src="553005475_4110990559121515_3594999438822484752_n.jpg"/>
-    </div>
-	<div class="imgContainer">
-        <img width="400" length="310" src="A8B180DD-8E55-4037-B234-63668BFA37E5.jpg"/>
+        <img width="400" length="310" src="553729376_1204088481748277_200540172726758059_n.png"/>
     </div>
             </div>
         </div>
@@ -117,6 +114,7 @@
 </body>
     </section>
 </html>
+
 
 
 
