--- a/contact.html
+++ b/contact.html
@@ -88,7 +88,7 @@
     <a href="stream.html">STREAM</a> 
     <a href="merch.html">MERCH</a> 
     <a href="contact.html">CONTACT</a>
-    <a href="https://sirisunshine.bandcamp.com/album/make-me-feel-something">BANDCAMP</a>
+    <a href="https://sirisunshine.bandcamp.com/">BANDCAMP</a>
   </p1>
 
 <p>for booking, merch, interviews, or other inquiries, send an email to <style="font-size:175 %;" ><a href="mailto:sirisunshine@sirisunshine.net">sirisunshine@sirisunshine.net</style="font-size:175 %;" ><a href="mailto:sirisunshine@sirisunshine.net"></p>
@@ -127,4 +127,5 @@
  <footer>
 </body>
     </section>
+
 </html>
