--- a/merch.html
+++ b/merch.html
@@ -88,7 +88,7 @@
     <a href="stream.html">STREAM</a> 
     <a href="merch.html">MERCH</a>
 	<a href="contact.html">CONTACT</a>
-    <a href="https://sirisunshine.bandcamp.com/album/make-me-feel-something">BANDCAMP</a>
+    <a href="https://sirisunshine.bandcamp.com/album/">BANDCAMP</a>
   </p1>
 
 <div class="image123">
@@ -139,6 +139,7 @@
 </body>
     </section>
 </html>
+
 
 
 
